src/plugins/qpa/integration.h
@@ -23,6 +23,7 @@ class Output;
 namespace QPA
 {
 
+class Clipboard;
 class Screen;
 
 class Integration : public QObject, public QPlatformIntegration
@@ -44,6 +45,7 @@ public:
     QPlatformAccessibility *accessibility() const override;
     QPlatformNativeInterface *nativeInterface() const override;
     QPlatformServices *services() const override;
+    QPlatformClipboard *clipboard() const override;
     void initialize() override;
 
     QHash<Output *, Screen *> screens() const;
@@ -60,6 +62,7 @@ private:
     QPlatformPlaceholderScreen *m_dummyScreen = nullptr;
     QHash<Output *, Screen *> m_screens;
     std::unique_ptr<QGenericUnixServices> m_services;
+    std::unique_ptr<Clipboard> m_clipboard;
 };
 
 }
